EPBDS-15531 Implemented total number of elements for pagination response